--- a/views/index.jade
+++ b/views/index.jade
@@ -42,3 +42,5 @@ block content
                 br
                 small  played by 
                   a(href="/djs/#{song._dj.plugID}") #{song._dj.name}
+                  a(href="/history/#{song.id}")
+                    abbr(title="#{song.isoDate}").timeago
